# CairoSample

./: CMakeLists.txt  Main.cpp  README.md  setup-win32.py
modules/: FindCairo.cmake
